# SoftwareRaytracer

./: CMakeLists.txt  build.sh
src/: Source.cpp
src/object/: Object.h  Plane.cpp  Plane.h  Sphere.cpp  Sphere.h
src/raytracer/: Camera.h  Light.h  RayTracer.cpp  RayTracer.h
src/util/: Color.h  Ray.h  Vector.h
